# csuperlu

./: .gitignore  Cargo.toml  README.md  cargo-doc.sh  make-docs.sh
.github/workflows/: ci.yml
c/: LICENSE.txt  Makefile  README.md  dlinsol.c  superlu  superlu.c
examples/: complex.rs  complex_double.rs  complex_float.rs  dlinsol.rs  float.rs  read_harwell_boeing.rs  same_pattern.rs  similar_values.rs  simple.rs  sparse_matrix.rs  superlu.rs
src/: c.rs  comp_col.rs  dense.rs  error.rs  free.rs  harwell_boeing.rs  lib.rs  lu_decomp.rs  simple_driver.rs  sparse_matrix.rs  super_matrix.rs  super_node.rs  utils.rs  value_type.rs
src/c/: comp_col.rs  dense.rs  dgssv.rs  error.rs  expert_driver.rs  free.rs  mod.rs  options.rs  simple_driver.rs  stat.rs  super_matrix.rs  super_node.rs  tests.rs  utils.rs  value_type.rs
src/c/comp_col/: create_comp_col_mat.rs
src/c/dense/: create_dense_mat.rs
src/c/simple_driver/: tests.rs
src/comp_col/: mod.rs
src/csuperlu_sys/: comp_col.rs  dense.rs  super_node.rs
src/dense/: mod.rs
src/simple_driver/: mod.rs
src/sparse_matrix/: tests.rs
src/super_node/: mod.rs
src/superlu/: comp_col.rs  dense.rs  mod.rs  solve.rs  super_node.rs  utils.rs
src/superlu/comp_col/: c_comp_col.rs  mod.rs
src/superlu/dense/: c_dense.rs  mod.rs
src/superlu/dgssv/: c_dgssv.rs  mod.rs
src/superlu/super_node/: c_super_node.rs  mod.rs
src/superlu/utils/: c_utils.rs  mod.rs
