[package]
name = "csuperlu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num = "0.4.0"
libc = "0.2.0"
csuperlu_sys = { git = "https://github.com/johnrscott/csuperlu_sys" }
itertools = "0.10.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]
